--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pipeline"]
 	path = pipeline
-	url = file:///home/ben/dev/bb_imganalysis_pipeline
+	url = git@maserati.mi.fu-berlin.de:pipeline
