use cpm for dependency management, remove pipeline submodule

--- a/ImgAnalysisTracker/CMakeLists.txt
+++ b/ImgAnalysisTracker/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(lib_name "ImgAnalysisTracker")
+set(lib_name "ImgAnalysisTracker.tracker")
 
 file(GLOB src_main RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
 file(GLOB hdr_main RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h *.hpp)
@@ -8,38 +8,10 @@ file(GLOB hdr_legacy RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} legacy/*.h *.hpp)
 
 qt5_wrap_ui(UI_HEADERS_LOCAL ${ui_main})
 
-add_definitions(-DUSE_DEEPLOCALIZER)
-
-include_directories(${biotracker-includes})
-
-add_library(${lib_name} STATIC
+add_library(${lib_name} SHARED
     ${src_main} ${hdr_main} ${src_legacy} ${hdr_legacy} ${UI_HEADERS_LOCAL}
 )
 
-get_target_property(DEEPLOCALIZER_CLASSIFIER_LIBRARY_DIR Pipeline PIPELINE_DEEPLOCALIZER_LIBRARY_DIR)
-
-link_directories(${DEEPLOCALIZER_CLASSIFIER_LIBRARY_DIR})
-
-get_target_property(PIPELINE_INCLUDES Pipeline PIPELINE_INCLUDES)
-
-include_directories(${PIPELINE_INCLUDES})
-
 target_link_libraries(${lib_name}
-    "deeplocalizer-classifier"
-    Pipeline
-    Qt5::Widgets
-    Qt5::OpenGL
-    ${OPENGL_LIBRARIES}
-    ${OpenCV_LIBS}
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${Boost_LIBRARIES}
-    ${Caffe_LIBRARIES}
-    ${LMDB_LIBRARIES}
-    ${CUDA_LIBRARIES}
+    ${CPM_LIBRARIES}
 )
-
-list(APPEND ALGORITHM_LIBRARIES ${lib_name})
-set(ALGORITHM_LIBRARIES "${ALGORITHM_LIBRARIES}" CACHE INTERNAL "")
-
-list(APPEND ALGORITHM_LINK_DIRECTORIES ${DEEPLOCALIZER_CLASSIFIER_LIBRARY_DIR})
-set(ALGORITHM_LINK_DIRECTORIES "${ALGORITHM_LINK_DIRECTORIES}" CACHE INTERNAL "")
