--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ endif()
 if(NOT DEFINED DEEPLOCALIZER_MODELS_PATH)
     CPM_AddModule("deeplocalizer_models"
         GIT_REPOSITORY "git@github.com:BioroboticsLab/deeplocalizer_models.git"
-        GIT_TAG "master"
+        GIT_TAG "use-mxnet"
     )
 else()
     CPM_AddModule("deeplocalizer_models"
@@ -48,7 +48,7 @@ endif()
 
 set(BIOTRACKER_CORE_LIB_TYPE SHARED)
 include_biotracker_core("master")
-include_pipeline("master")
+include_pipeline("use-mxnet")
 
 CPM_Finish()
 
