--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ endif()
 set(BIOTRACKER_CORE_LIB_TYPE SHARED)
 include_biotracker_core("master")
 include_pipeline("use-mxnet")
+include_beesbook_groundtruth("master")
 
 CPM_Finish()
 
